# agent-tracebench

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  release.md  reproducibility.md  roadmap.md  trace-schema.md  validation.md
examples/: README.md
examples/benchmarks/: run_fidelity.py  run_scalability.py
examples/case_study/: README.md  baseline.jsonl  candidate.jsonl  run_case_study.py  run_power_study.py
examples/traces/: baseline.jsonl  candidate.jsonl
src/tracebench/: __init__.py  analysis.py  assertions.py  bench.py  cli.py  doctor.py  io.py  models.py  otel.py  reports.py  schema.py
tests/: test_tracebench.py
